@@ -2,3 +2,4 @@
   * Initial commit
   * Add Nestable::Tree logic
   * Rename :foreign_key option to :parent_column
+  * Update test_helper
